[project]
name = "pytorch-multilabel-balanced-sampler"
version = "0.1.1"
description = "PyTorch sampler that outputs roughly balanced batches with support for multilabel datasets."
authors = [
    {name = "Issa Memari", email = "issa.memari@gmail.com"},
]
dependencies = ["torch"]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.4.0",
]
